# chsc

./: .ghci  .gitignore  GHC.hs  IGraph.hs  IdSupply.hs  Lattices.hs  Main.hs  Name.hs  README  Renaming.hs  StaticFlags.hs  Utilities.hs  build-profiling  ghci  nresults-vanilla.tex  relative-results-neil.tex  results-all-eligible-generalisation.tex  results-bags-no-sub-graphs.tex  results-bags-strong.tex  results-bags-strongest.tex  results-bags.tex  results-best.tex  results-deeds-fcfs.tex  results-deeds-proportional.tex  results-discard-fulfilments-on-rollback.tex  results-duplicate-values-evaluator.tex  results-duplicate-values-splitter.tex  results-generalisation.tex  results-ghc.tex  results-graphs.tex  results-local-tiebacks+deeds-fcfs+bloat-1.tex  results-local-tiebacks+deeds-fcfs+bloat-10.tex  results-local-tiebacks+deeds-fcfs+bloat-2.tex  results-local-tiebacks+deeds-fcfs+bloat-20.tex  results-local-tiebacks+deeds-fcfs+bloat-3.tex  results-local-tiebacks+deeds-fcfs+bloat-30.tex  results-local-tiebacks+deeds-fcfs+bloat-4.tex  results-local-tiebacks+deeds-fcfs+bloat-40.tex  results-local-tiebacks+deeds-fcfs+bloat-5.tex  results-local-tiebacks+deeds-fcfs+bloat-50.tex  (+55 more)
Core/: Counted.hs  Data.hs  FreeVars.hs  Parser.hs  Prelude.hs  Prettify.hs  Renaming.hs  Size.hs  Statics.hs  Syntax.hs  Tag.hs
Evaluator/: Deeds.hs  Evaluate.hs  FreeVars.hs  Residualise.hs  Syntax.hs
Size/: Deeds.hs
Supercompile/: Drive.hs  Drive.hs-boot  Match.hs  PostSimplify.hs  Residualise.hs  Split.hs
Termination/: Extras.hs  Generaliser.hs  Never.hs  Statics.hs  TagBag.hs  TagGraph.hs  (+5 more)
(+174 files in other folders)
