Cabal-Version:      >= 1.2
Build-Type:         Simple
Name:               supercompile
Version:            0.1
Maintainer:         Max Bolingbroke <batterseapower@hotmail.com>
Homepage:           http://www.github.com/batterseapower/supercompile
License:            BSD3
License-File:       LICENSE
Author:             Max Bolingbroke
Synopsis:           Call-by-need supercompiler in Haskell
Category:           Language

Executable supercompile
    Main-Is:        Main.hs
    Build-Depends:  base >= 4 && < 5, containers >= 0.3 && < 0.5, deepseq >= 1.1.0.0 && < 1.2,
                    pretty >= 1.0.1.1 && < 1.1, prettyclass >= 1 && < 1.2,
                    random >= 1.0 && < 1.1, process >= 1.0.1.2 && < 1.1,
                    directory >= 1.0.1.0 && < 1.2, filepath >= 1.1.0.3 && < 1.3,
                    time >= 1.1.4 && < 1.3,
                    haskell-src-exts >= 1.9.0 && < 1.10.0, cpphs >= 1.11 && < 1.12,
                    lattices >= 1.2 && < 1.3
    
    Ghc-Options:    -fwarn-unused-binds -fwarn-unused-imports -fwarn-unused-matches -fwarn-incomplete-patterns
